# iudex

./: README.md  pyproject.toml
.github/workflows/: test.yaml
src/iudex/: checks.py  dataframe_protocol.py  errors.py  schema.py  validate.py
tests/: test_checks.py  test_validate.py
