[tool.poetry]
name = "iudex"
version = "0.1.0"
description = "A data validation library built around Python's Dataframe API standard."
authors = ["Judah Rand <17158624+judahrand@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "^15.0.0"
typing-extensions = { version = "^4.8", markers = "python_version < '3.12'" }
ibis-framework = {extras = ["duckdb"], version = "^8.0.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
pandas = "^2.2.0"
pytest-cov = "^4.1.0"
pandas-stubs = "^2.2.0.240218"
mypy = "^1.8.0"

[tool.mypy]
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

files = ["iudex", "tests"]

no_implicit_optional = true

strict_optional = true
strict_equality = true

disallow_any_generics = true

implicit_reexport = false

[[tool.mypy.overrides]]
module = "ibis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
